fix little scrollbar that shows up in headless sim

--- a/theme/common.less
+++ b/theme/common.less
@@ -1494,6 +1494,10 @@ p.ui.font.small {
         background: none transparent;
         min-width: inherit;
         max-width: inherit;
+
+        .tab-simulator {
+            display: none;
+        }
     }
 
     #boardview, .filemenu {
